Actions
Bug #12414
opendld: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/dld/dld_proto.c: In function 'proto_setphysaddr_req': ../../common/io/dld/dld_proto.c:962:2: error: 'dl_err' may be used uninitialized in this function [-Werror=maybe-uninitialized] 962 | dlerrorack(q, mp, DL_SET_PHYS_ADDR_REQ, dl_err, (t_uscalar_t)err); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Actions