12414 dld: variable may be used uninitialized

../../common/io/dld/dld_proto.c: In function 'proto_setphysaddr_req':
../../common/io/dld/dld_proto.c:962:2: error: 'dl_err' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  962 |  dlerrorack(q, mp, DL_SET_PHYS_ADDR_REQ, dl_err, (t_uscalar_t)err);
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

Change-Id: Ia307aac68b8fe948bab4c9ca65c516c1c3b6777e